# baggo

./: .gitignore  Cargo.toml  README.md  pyproject.toml  sandbox.py
.github/workflows/: code_quality.yml  publish.yml
baggo/: __init__.py  app.py  baggo.pyi  color.py  colors.py  cp437.py  csscolors.py
baggo/input/: __init__.py  inputs.py
baggo/res/: __init__.py
baggo/terminal/: __init__.py  font.py  terminal.py  terminal_builder.py
baggo/terminal/backends/arcade/: __init__.py  font_arcade.py  terminal_arcade.py
baggo/terminal/console/: __init__.py  console.py  simple.py
src/: algorithm2d.rs  lib.rs  map2d.rs  recursive_shadowcasting.rs
src/geometry/: point.rs
tutorial/part1/: main.py
tutorial/part2/: main.py
tutorial/part3/: main.py
tutorial/part4/: components.py  level.py  main.py  rect.py
tutorial/part5/: components.py  level.py  main.py  rect.py
